--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- ✅ Cloudinary SDK -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.33.0</version>
+        </dependency>
+
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
