--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,28 @@
 spring.application.name=auction-system
 server.port=8080
+
+# ===============================
+# = JPA / HIBERNATE CONFIG
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ===== MySQL (default) =====
-spring.datasource.url=jdbc:mysql://localhost:3306/auction_db?createDatabaseIfNotExist=true
+# ===============================
+# = MYSQL CONFIG
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/bidsphere_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=31032004
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=Ducminh123..
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===== PostgreSQL =====
-# spring.datasource.url=jdbc:postgresql://localhost:5432/auction_db
-# spring.datasource.username=postgres
-# spring.datasource.password=123456
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# CLOUDINARY CONFIG
+cloudinary.cloud_name=dzoz7ngp5
+cloudinary.api_key=866956232565748
+cloudinary.api_secret=H_zKfwDRCn_jCtXRxKENC3itS9M
+
+# MULTIPART CONFIG (bắt buộc khi upload file)
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
