--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # ===== MySQL (default) =====
-spring.datasource.url=jdbc:mysql://localhost:3306/auction_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/auction_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=31032004
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
