--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,6 @@
 # ===============================
 spring.application.name=auction-system
 server.port=8080
-
-# ===============================
-# = JPA / HIBERNATE CONFIG
-# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -16,7 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/auction_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Duy080205
+spring.datasource.password=Ducminh5404!
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
 # = JWT CONFIG
