--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.password=zoqs imtt nijw dtqp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# VietQR Config
+vietqr.bank-code=970422
+vietqr.account-number=1903202304
+vietqr.template=compact2
+
