--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/auction_system?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=admin
-=======
-spring.datasource.password=123456
->>>>>>> 6de1708182f1db3f60421c3bd23f1e02914ce3d6
+
+spring.datasource.password=Duy080205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
